fix: align tag menu content

--- a/src/components/Cell/components/TagCellEdit/component/MenuBody/styles.css
+++ b/src/components/Cell/components/TagCellEdit/component/MenuBody/styles.css
@@ -1,5 +1,4 @@
 .NLT__tag-menu-body {
     max-height: 140px;
     overflow-y: scroll;
-    padding: 4px 10px;
 }
